# hello-rust-android

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/rsonnicdebris/usty/droid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/rsonnicdebris/usty/droid/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/rsonnicdebris/usty/droid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
