[package]
name = "rustydroid"
version = "0.1.0"
authors = ["Athos Bacchiocchi <athos.bacchiocchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.10.2", default-features = false }

[lib]
crate_type = ["staticlib", "dylib"]

# [profile.release]
# lto = true

#[lib]
#name = "rust"
#crate-type = ["cdylib"]